tests/lean/mutwf1.lean.expected.out
mutwf1.lean:28:2-28:6: error: unsolved goals
case h.a
n : Nat
h : n ≠ 0
⊢ Nat.sub n 0 ≠ 0
mutwf1.lean:37:22-37:29: error: failed to prove termination, possible solutions:
  - Use `have`-expressions to prove the remaining goals
  - Use `termination_by` to specify a different well-founded relation
  - Use `decreasing_by` to specify your own tactic for discharging this kind of goal
case h
n : Nat
⊢ n + 1 < n
